--- a/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
+++ b/yaapp/templates/yabase/app/myRadios/radioWithStatsCell.mustache
@@ -7,7 +7,7 @@
             <span class=''>{% trans "Delete" %}</span>
         </button>
         <button class='yabutton-small right edit-playlist'>
-            <span class=''>{% trans "Playlist" %}</span>
+            <span class=''>{% trans "Programming" %}</span>
         </button>
         <button class='yabutton-small right edit-radio'>
             <span class=''>{% trans "Settings" %}</span>
