--- a/yaapp/templates/yabase/app/programming/programmingPage.mustache
+++ b/yaapp/templates/yabase/app/programming/programmingPage.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
 <div class='row'>
     <div class='span12'>
-    <button class='yabutton right' id='edit-settings-btn'>{% trans 'Edit settings' %}</button>
+    <button class='yabutton right' id='edit-settings-btn'>{% trans 'Settings' %}</button>
         <h2 class='zone-title'>{% trans "Programming" %}</h2>
     </div>
 
