--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -329,9 +329,8 @@
         </a>
       </div>
       <div class='visible-phone responsive-settings-btn2'>
-        <div class="switch-container">
-            <input type="checkbox"/>
-            <span class='hd-bg' />
+        <div id="hd-button-mobile" class='hd-disabled'>
+            &nbsp;
         </div>
       </div>
             <div class="header-separation">
