--- a/yaapp/templates/yabase/app/radio/radioUser.mustache
+++ b/yaapp/templates/yabase/app/radio/radioUser.mustache
@@ -1,7 +1,7 @@
 {% load i18n %}
-<div class='user thumbnail'>
-    <img src='<% picture %>' width='48px' height='48px'/>
+<div class='user'>
+    <img src='<% picture %>' width='30px' height='30px'/>
     <div class='caption'>
-    <h5><a href='/app/profile/<% id %>/'><% name %></a></h5>
+    <!-- <h5><a href='/app/profile/<% id %>/'><% name %></a></h5> -->
     </div>
 </div>
