added new google analytics code

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -499,9 +499,10 @@
 {% endifnotequal %}
 
 <script type="text/javascript">
-// GOOGLE ANALYTICS
+
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-4211339-12']);
+  _gaq.push(['_setAccount', 'UA-27871295-2']);
+  _gaq.push(['_setDomainName', 'yasound.com']);
   _gaq.push(['_trackPageview']);
 
   (function() {
@@ -509,6 +510,7 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
+
 </script>
 </html>
 
