--- a/yaapp/templates/base.html
+++ b/yaapp/templates/base.html
@@ -40,8 +40,8 @@
         <img src='/media/images/available-appstore-fr.png' alt='{% trans "available on appstore" %}'/>
         </a>
         </div>
-    </div>    
-    
+    </div>
+
     <footer>
       <div id="menu">
       {% if request.user.is_authenticated %}<a href="{% url logout %}">{% trans "Logout" %}</a> {% else %}<a href="{% url login %}">{% trans "Login" %}</a>{% endif %} | <a href="http://yasound.com/fr/a_propos_de_nous.php">À propos de nous</a> | <a href="http://yasound.com/fr/jobs.php">Jobs</a> | <a href="http://yasound.com/fr/presse.php">Presse</a> | <a href="http://yasound.com/fr/contact.php">Contact</a>
@@ -52,9 +52,10 @@
 {% endblock %}
 
 <script type="text/javascript">
-// GOOGLE ANALYTICS
+
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-4211339-12']);
+  _gaq.push(['_setAccount', 'UA-27871295-2']);
+  _gaq.push(['_setDomainName', 'yasound.com']);
   _gaq.push(['_trackPageview']);
 
   (function() {
@@ -62,6 +63,7 @@
     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
+
 </script>
 </html>
 
