--- a/yaapp/templates/yabase/app/radio/radio.mustache
+++ b/yaapp/templates/yabase/app/radio/radio.mustache
@@ -49,8 +49,8 @@
     {% else %}
   		<%#creator%>
       <%#owner%>
-  		<li><a href="/app/radio/<%uuid%>/edit/" id="settings-btn"><img src="/media/app/images/radio/radio-icon-settings.png"/><span>{% trans "Edit settings" %}</span></a></li>
-  		<li><a href="/app/radio/<%uuid%>/programming/" id="programming-btn"><img src="/media/app/images/radio/radio-icon-music.png"/><span>{% trans "Edit playlist" %}</span></a></li>
+  		<li><a href="/app/radio/<%uuid%>/edit/" id="settings-btn"><img src="/media/app/images/radio/radio-icon-settings.png"/><span>{% trans "Settings" %}</span></a></li>
+  		<li><a href="/app/radio/<%uuid%>/programming/" id="programming-btn"><img src="/media/app/images/radio/radio-icon-music.png"/><span>{% trans "Programming" %}</span></a></li>
       <li><a href="#" id='broadcast-btn'><img src="/media/app/images/radio/radio-icon-message.png"/><span>{% trans "Broadcast to your fans" %}</span></a></li>
   		<%/owner%>
       <%/creator%>
