new radio page is now responsive compatible

--- a/yaapp/templates/yabase/app/newRadio/newRadioPage.mustache
+++ b/yaapp/templates/yabase/app/newRadio/newRadioPage.mustache
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class='row'>
+<div class='row-fluid'>
     <div id='radio-creation-container' class='span12'>
         <h1>
             Création d'une radio Yasound
