--- a/yaapp/templates/yabase/app/radio/track.mustache
+++ b/yaapp/templates/yabase/app/radio/track.mustache
@@ -2,7 +2,7 @@
    <div id='webapp-track-container'>
 		<div id='webapp-track-picture'>
             {% if yasound_song %}
-            <img src="{{ yasound_song.large_cover_url }}" width="210px" height="210px"/>
+            <img src="{% if yasound_song.large_cover_url %}{{ yasound_song.large_cover_url }}{% else %}{{ yasound_song.album.large_cover_url }}{% endif %}" width="210px" height="210px"/>
             {% else %}
             <img src="<% large_cover %>" width="210px" height="210px"/>
             {% endif %}
