--- a/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.message.mustache
@@ -1,12 +1,16 @@
 {% load i18n %}
 {% load thumbnail %}
-<div class='wall-event-message'>
+<div id='wall-event-messages' class='wall-event-message'>
 	{% if wall_event %}
     {% thumbnail wall_event.user_picture "48x48" format='PNG' as im %}
-	<img class='user' src='{{im.url}}' width='48px' height='48px'/>
+	<div class='wall-profile-picture'>
+		<img class='user' src='{{im.url}}' width='50px' height='50px'/>
+	</div>
 	{% endthumbnail %}
 	{% else %}
-	<img class='user' src='<% user_picture %>' width='48px' height='48px'/>
+	<div class='wall-profile-picture'>
+		<img class='user' src='<% user_picture %>' width='50px' height='50px'/>
+	</div>
 	{% endif %}
 	{% if request.user.is_authenticated %}
 	<div class='wall-event-remove'>
@@ -22,7 +26,9 @@
 	    {% endif %}
 	</div>
 	{% endif %}
-	<p>{{ wall_event.text|default:'<% text %>' }}</p>
-	<h2><a href='/app/profile/{{ wall_event.username|default:'<% user_username %>' }}/'>{{ wall_event.user_name|default:'<% user_name %>'}}</a></h2>
-	<div class='date'>{{ wall_event.start_date|default:'<% formatted_start_date %>' }}</div>
+	<div class='wall-messages-text'>
+		<p>{{ wall_event.text|default:'<% text %>' }}</p>
+		<h2><a href='/app/profile/{{ wall_event.username|default:'<% user_username %>' }}/'>{{ wall_event.user_name|default:'<% user_name %>'}}</a></h2>
+		<div class='date date-comment'>{{ wall_event.start_date|default:'<% formatted_start_date %>' }}</div>
+	</div>
 </div>
