--- a/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
+++ b/yaapp/templates/yabase/app/radio/wallEvent.like.mustache
@@ -3,7 +3,7 @@
 	<div class='radio-picto'>
                 {% if wall_event %}
 				<a href='/app/radio/{{ wall_event.radio_uuid }}/'>
-                <img src='{{ wall_event.song_cover_url }}' width='32px' height='32px' alt='Radio picto'/>
+                <img src='{{ wall_event.song_cover_url|default:'/media/images/default_album.png' }}' width='32px' height='32px' alt='Radio picto'/>
 				</a>
                 {% else %}
                 <a href='/app/radio/<% radio_uuid %>/'>
