gray splash screen

--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -37,7 +37,7 @@ HTML, BODY { height: 100%; }
      left: 0;
      width: 100%;
      height: 100%;
-     background-color: white;
+     background-color: #f0f0f0;
      z-index: 2000;
 }
 #loading {
@@ -47,7 +47,7 @@ HTML, BODY { height: 100%; }
      z-index: 2002;
 }
 #loading span {
-     background: url('/media/images/loader.gif') no-repeat left center;
+     background: url('/media/images/loader-gray.gif') no-repeat left center;
      padding: 5px 30px;
      position:relative;
      margin:0 auto;
