--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -232,6 +232,10 @@ HTML, BODY { height: 100%; }
      {% include "yabase/app/radio/userRadiosPage.mustache" %}
    </script>
 
+   <script type='text/html' id='listenersPageTemplate'>
+     {% include "yabase/app/radio/listenersPage.mustache" %}
+   </script>
+
    <script type='text/html' id='favoritesPageTemplate'>
      {% include "yabase/app/favorites/favoritesPage.mustache" %}
    </script>
