--- a/yaapp/templates/yabase/app/radio/wallInput.mustache
+++ b/yaapp/templates/yabase/app/radio/wallInput.mustache
@@ -1,5 +1,5 @@
 {% load i18n %}
 <form class="form-search">
-    <textarea type="textarea" class="input-xxlarge wall-textarea search-query" row='9' maxlength='120'></textarea>
-    <button type="submit" class="btn submit-btn yabutton-large wall-btn-responsive" id='submit'>{% trans "Post message" %}</button>
+    <textarea type="textarea" id='wall-input-textarea' class="input-xxlarge wall-textarea search-query" row='9' maxlength='120'></textarea>
+    <button type="submit" disabled='disabled' class="btn submit-btn yabutton-large wall-btn-responsive" id='submit'>{% trans "Post message" %}</button>
 </form>
