--- a/yaapp/templates/deezer/inapp.html
+++ b/yaapp/templates/deezer/inapp.html
@@ -310,7 +310,7 @@
 {% endblock %}
 
 <div id="dz-root"></div>
-<script src="http://cdn-files.deezer.com/js/min/dz.js"></script>
+<script src="https://cdn-files.deezer.com/js/min/dz.js"></script>
 <script>
   DZ.init({
     appId  : {{ deezer_app_id }},
