--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -538,7 +538,7 @@ HTML, BODY { height: 100%; }
 
 {% ifnotequal sound_player 'deezer' %}
 <div id="dz-root"></div>
-<script src="https://cdn-files.deezer.com/js/min/dz.js"></script>
+<script src="http://cdn-files.deezer.com/js/min/dz.js"></script>
 <script>
   DZ.init({
     appId  : {{ deezer_app_id }},
