--- a/yaapp/templates/yabase/webapp.html
+++ b/yaapp/templates/yabase/webapp.html
@@ -107,7 +107,7 @@ HTML, BODY { height: 100%; }
     {% endifequal %}
 
     {% ifequal sound_player 'deezer' %}
-    <script type="text/javascript" src="https://cdn-files.deezer.com/js/min/dzapp.js"></script>
+    <script type="text/javascript" src="https://cdns-files.deezer.com/js/min/dzapp.js"></script>
     {% endifequal %}
 
     <script type="text/javascript" src='/media/js/socket.io.js'></script>
@@ -538,7 +538,7 @@ HTML, BODY { height: 100%; }
 
 {% ifnotequal sound_player 'deezer' %}
 <div id="dz-root"></div>
-<script src="http://cdn-files.deezer.com/js/min/dz.js"></script>
+<script src="https://cdns-files.deezer.com/js/min/dz.js"></script>
 <script>
   DZ.init({
     appId  : {{ deezer_app_id }},
